[tool.poetry]
name = "pymap"
version = "0.0.1"
description = "A simple key-value data structure."
authors = ["Walkaisa <contact@walkaisa.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
